--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,15 +1,27 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
-  "icons": [
-    {
-      "src": "favicon.ico",
-      "sizes": "64x64 32x32 24x24 16x16",
-      "type": "image/x-icon"
-    }
-  ],
-  "start_url": ".",
-  "display": "standalone",
-  "theme_color": "#000000",
-  "background_color": "#ffffff"
+    "manifest_version": 2,
+    "name": "chrome-extension-template2",
+    "version": "0.0.1",
+    "description": "Chrome extension boilerplate, replace all values!",
+    "icons": {
+        "16": "16x16.png",
+        "48": "48x48.png",
+        "128": "128x128.png"
+    },
+    "background": {
+        "scripts": [
+            "background.js"
+        ],
+        "persistent": false
+    },
+    "browser_action": {
+        "default_title": "Boilerplate popup!",
+        "default_popup": "index.html"
+    },
+    "permissions": [
+        "tabs",
+        "<all_urls>",
+        "activeTab",
+        "bookmarks"
+    ]
 }
