--- a/package.json
+++ b/package.json
@@ -4,9 +4,12 @@
     "private": true,
     "dependencies": {
         "@primer/octicons-react": "^9.1.1",
+        "bootstrap": "^4.3.1",
+        "bootswatch": "^4.3.1",
         "node-sass": "^4.12.0",
         "react": "^16.8.6",
         "react-dom": "^16.8.6",
+        "react-redux": "^7.1.0",
         "react-scripts": "3.0.1",
         "redux": "^4.0.4",
         "redux-thunk": "^2.3.0"
