--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,8 +1,8 @@
 {
     "manifest_version": 2,
-    "name": "chrome-extension-template2",
-    "version": "0.0.1",
-    "description": "Chrome extension boilerplate, replace all values!",
+    "name": "Switcher",
+    "version": "1.0.0",
+    "description": "Switcher allows you to create profiles and switch them in to the bookmarks bar!",
     "icons": {
         "16": "16x16.png",
         "48": "48x48.png",
@@ -15,7 +15,6 @@
         "persistent": false
     },
     "browser_action": {
-        "default_title": "Boilerplate popup!",
         "default_popup": "index.html"
     },
     "permissions": [
